# storage

./: .flake8  .gitignore  CONTRIBUTORS  README.md  circle.yml  integration-tests.py  mypy.ini  publish_to_pypi.sh  pyproject.toml  pyrax-requirements.txt  pytest.ini  requirements.txt  setup.py  test_integration.py
.circleci/: config.yml
storage/: __init__.py  cloudfiles_storage.py  ftp_storage.py  google_storage.py  local_storage.py  retry.py  s3_storage.py  storage.py  swift_storage.py  swift_storage2.py  url_parser.py
stubs/boto3/: __init__.pyi  session.pyi
stubs/boto3/s3/: transfer.pyi
stubs/botocore/: config.pyi  exceptions.pyi  session.pyi
stubs/google/cloud/: exceptions.pyi
stubs/google/cloud/storage/: blob.pyi  bucket.pyi  client.pyi
stubs/google/oauth2/: service_account.pyi
stubs/keystoneauth1/: session.pyi
stubs/keystoneauth1/exceptions/: http.pyi
stubs/keystoneauth1/identity/: v2.pyi
stubs/swiftclient/: client.pyi  exceptions.pyi  utils.pyi
tests/: helpers.py  service_test_case.py  storage_test_case.py  swift_service_test_case.py  test_cloudfiles_storage.py  test_ftp_storage.py  test_google_storage.py  test_local_storage.py  test_retry.py  test_s3_storage.py  test_storage.py  test_swift_storage.py  test_swift_storage2.py  test_url_parser.py
