[tool.poetry]
name = "object-storage"
version = "0.14.4"
description = "Python library for accessing files over various file transfer protocols."
authors = ["uStudio Developers <dev@ustudio.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "storage"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = ">=1.0.1"
google-cloud-storage = "^1.18.0"
python-swiftclient = "^4.6.0"
keystoneauth1 = "^5.1.3"
setuptools = "<68"


[tool.poetry.group.dev.dependencies]
flake8 = "3.7.8"
mypy = "^1.13.0"
pytest = "5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
